# dumbsterfire

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yaml
src/: checksum.rs  cli.rs  config.rs  email.rs  error.rs  filter.rs  imap.rs  labels.rs  main.rs  models.rs
