[package]
name = "dumbsterfire"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
hex = "0"
html2text = "0"
imap = "2"
mailparse = "0"
native-tls = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0"
thiserror = "2"
